examples/false_positive_masking_bug/klee-out-0/test000001.kquery
array y[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Ult (Mul w64 4
                           (SExt w64 (Add w32 1
                                              (Select w32 (Slt (ReadLSB w32 0 y)
                                                               10)
                                                          8
                                                          9))))
                  37))]
        false)
